<resources>
    <string name="app_name">add_theme_ui</string>
    <string name="Theme_name">Theme name</string>
    <string name="Enter_your_years_experience">Enter your years experience in this theme</string>
    <string name="Continue">Continue</string>
    <string name="Add_theme_photo">Add photo</string>
    <string name="theme_importance">Theme importance</string>
    <string name="theme_type">Theme type</string>
    <string name="create_your_theme">Create your Theme</string>

    <string name="enter_theme_name">Enter theme name</string>
    <string name="enter_theme_importance">Choose theme importance</string>
    <string name="enter_theme_experience_level">Choose theme experience level</string>
    <string name="enter_theme_type">Choose theme type</string>
    <string name="add_theme_photo">Add theme photo</string>
    <string name="beginner">BEGINNER</string>
    <string name="average">AVERAGE</string>
    <string name="advanced">ADVANCED</string>
    <string name="incorrect_theme_name">Incorrect theme name!</string>
    <string name="high">HIGH</string>
    <string name="middle">MIDDLE</string>
    <string name="low">LOW</string>
    <string name="theme_mixed">Theme-mixed</string>
    <string name="theme_formula">Theme-formula</string>
    <string name="open_theme">Open-theme</string>
    <string name="regular_theme">Regular-theme</string>
    <string name="regular_theme_description">This is the most regular theme; it will include all types of mnemonics. AI will choose the type of mnemonic that fits you better and which is better suited. It is the best type to start the learning process.</string>
    <string name="open_theme_description">This theme will foster your ability to describe and self-reference your previous experiences. You will be involved in a self-retrospective learning process.</string>
    <string name="theme_formula_description">This theme will fit best to learn large formulas, equations, chemical rules, and so on. The theme includes a formula builder that will make your card creation process better and faster.</string>
    <string name="theme_mix_description">This theme will include all types of themes. This theme type will be fitting for general topics like "Philosophy," where different types of entities can be encountered.</string>

</resources>