<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/half_transparent_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="5dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/inriasansbold"
            android:gravity="center_horizontal"
            android:lines="1"
            android:text="@string/enter_theme_name"
            android:textColor="#000000"
            android:textSize="12pt" />

        <RelativeLayout
            android:id="@+id/theme_text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edit_text_background">

            <EditText
                android:id="@+id/theme_title_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/inriasanslight"
                android:hint="@string/Theme_name"
                android:padding="14dp"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:maxLines="1"/>
        </RelativeLayout>


        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/incorrect_theme_name"
            android:textColor="@color/error_red"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/secondary"
            android:fontFamily="@font/inriasansbold"
            android:text="@string/Continue"
            android:textColor="#FFF" />

    </LinearLayout>
</FrameLayout>