<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".fragments.ThemeImportanceFragment"
android:orientation="vertical"
android:gravity="center_horizontal">

<TextView
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="30dp"
    android:fontFamily="@font/inriasansbold"
    android:gravity="center_horizontal"
    android:lines="1"
    android:text="@string/enter_theme_experience_level"
    android:textColor="#000000"
    android:textSize="12pt" />


<LinearLayout
    android:id="@+id/beginner_level_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_background"
    android:elevation="8dp"
    android:orientation="horizontal"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:paddingLeft="10dp"
    android:layout_marginTop="80dp"
    android:paddingRight="10dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="5dp">

    <ImageView
        android:id="@+id/beginer_icon"
        android:layout_margin="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/beginer_level"
        />

    <TextView
        android:fontFamily="@font/inriasansbold"
        android:textColor="@color/black"
        android:textSize="42sp"
        android:gravity="center_vertical"
        android:id="@+id/beginer_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/beginner" />
</LinearLayout>
<LinearLayout
    android:id="@+id/middle_level_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_background"
    android:elevation="8dp"
    android:orientation="horizontal"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:paddingLeft="10dp"
    android:layout_marginTop="30dp"
    android:paddingRight="10dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="5dp">

    <TextView
        android:fontFamily="@font/inriasansbold"
        android:textColor="@color/black"
        android:textSize="42sp"
        android:gravity="center_vertical"
        android:id="@+id/middle_text"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/average" />

    <ImageView
        android:id="@+id/middle_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:src="@drawable/middle_level" />
</LinearLayout>
<LinearLayout
    android:id="@+id/expert_level_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_background"
    android:elevation="8dp"
    android:orientation="horizontal"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:paddingLeft="10dp"
    android:layout_marginTop="30dp"
    android:paddingRight="10dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="5dp">

    <ImageView
        android:id="@+id/expert_icon"
        android:layout_margin="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/expert_level"
        />

    <TextView
        android:fontFamily="@font/inriasansbold"
        android:textColor="@color/black"
        android:textSize="42sp"
        android:gravity="center_vertical"
        android:id="@+id/expert_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/advanced" />
</LinearLayout>

</LinearLayout>