<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.ThemeImportanceFragment"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/inriasansbold"
            android:gravity="center_horizontal"
            android:lines="1"
            android:text="@string/enter_theme_type"
            android:textColor="#000000"
            android:textSize="12pt" />

        <LinearLayout
            android:id="@+id/regular_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:elevation="8dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:layout_marginTop="90dp"
            android:paddingRight="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="5dp">


            <TextView
                android:fontFamily="@font/inriasansbold"
                android:textColor="@color/black"
                android:textSize="42sp"
                android:layout_margin="30dp"
                android:gravity="center_vertical"
                android:id="@+id/simple_them_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/regular_theme" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/open_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:elevation="8dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:paddingRight="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="5dp">


            <TextView
                android:fontFamily="@font/inriasansbold"
                android:textColor="@color/black"
                android:textSize="42sp"
                android:layout_margin="30dp"
                android:gravity="center_vertical"
                android:id="@+id/open_theme_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/open_theme" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/theme_formula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:elevation="8dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:paddingRight="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="5dp">


            <TextView
                android:fontFamily="@font/inriasansbold"
                android:textColor="@color/black"
                android:textSize="42sp"
                android:layout_margin="30dp"
                android:gravity="center_vertical"
                android:id="@+id/theme_formula_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/theme_formula" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mixed_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:elevation="8dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:paddingRight="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="5dp">


            <TextView
                android:fontFamily="@font/inriasansbold"
                android:textColor="@color/black"
                android:textSize="42sp"
                android:layout_margin="30dp"
                android:gravity="center_vertical"
                android:id="@+id/theme_mixed_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/theme_mixed" />
        </LinearLayout>

        </LinearLayout>

</ScrollView>


