<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:isScrollContainer="true">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/inriasansbold"
            android:gravity="center_horizontal"
            android:lines="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/enter_theme_importance"
            android:textColor="#000000"
            android:textSize="12pt" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.lum.add_theme_ui.fragments.ThemeImportanceFragment"
        android:gravity="center"
        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/high_importance_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_primary_background"
            android:elevation="8dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:layout_marginTop="80dp"
            android:paddingRight="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="5dp">
            <FrameLayout
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_white_background"
                android:layout_margin="20dp" >
                <ImageView
                    android:id="@+id/high_icon"
                    android:layout_margin="20dp"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/high"
                    />
            </FrameLayout>

            <TextView
                android:fontFamily="@font/inriasansbold"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:gravity="center_vertical"
                android:id="@+id/high_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/high" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/middle_level_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_primary_background"
            android:elevation="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="30dp"
            android:paddingRight="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="5dp">

            <TextView
                android:fontFamily="@font/inriasansbold"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:gravity="center_vertical"
                android:id="@+id/middle_text"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/middle" />
            <FrameLayout
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_white_background"
                android:layout_margin="20dp" >
                <ImageView
                    android:id="@+id/middle_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/middle" />
            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/low_importance_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_primary_background"
            android:elevation="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="30dp"
            android:paddingRight="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="5dp">

            <FrameLayout
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_white_background"
                android:layout_margin="20dp" >
                <ImageView
                    android:id="@+id/low_icon"
                    android:layout_margin="20dp"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/low"
                    />
            </FrameLayout>

            <TextView
                android:fontFamily="@font/inriasansbold"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:gravity="center_vertical"
                android:id="@+id/expert_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/low" />
        </LinearLayout>

    </LinearLayout>
    </FrameLayout>
</ScrollView>